--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.6/wavesurfer.min.js"></script>
     <style>
   div {
-    width: 400px;
+    width: 80%;
+    margin: auto;
   }
 
   button {
