Changed button colours

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <body>
   <button onclick="playAll()">PLAY/PAUSE</button>
-  <button onclick="restartAll()">RESTART</button>
-  <button onclick="stopAll()">STOP</button>
+  <button style="background-color:blue;"onclick="restartAll()">RESTART</button>
+  <button style="background-color:red;" onclick="stopAll()">STOP</button>
     <div id="waveform">
       <h1>Drums</h1>
         <progress id="progress" class="progress progress-striped" value="100" max="100"></progress>
